# hairy-wallhack

./: CMakeLists.txt
include/: .kdev_include_paths  math.hpp  resource_finder.hpp  sound_provider.hpp
include/controller/: glut_engine.hpp
include/flappy_box/controller/: box_object_logic.hpp  explosion_logic.hpp  paddle_logic.hpp  power_up_logic.hpp  world_logic.hpp
include/flappy_box/model/: box.hpp  explosion.hpp  game_over.hpp  paddle.hpp  power_up.hpp  world.hpp
include/flappy_box/view/: box_al_audible.hpp  box_gl_drawable.hpp  explosion_al_audible.hpp  explosion_gl_drawable.hpp  game_over_al_audible.hpp  game_over_gl_drawable.hpp  paddle_al_audible.hpp  paddle_gl_drawable.hpp  power_up_gl_drawable.hpp  world_al_audible.hpp  world_gl_drawable.hpp
include/model/: game.hpp  game_object.hpp
include/view/: al_renderer.hpp  gl_renderer.hpp
res/: box.mtl  box_fog_frag.glsl  box_fog_fsh.glsl  box_fsh.glsl  box_vert.glsl  box_vsh.glsl  char_fsh.glsl  char_vert.glsl  drop.mtl  drop_fog_frag.glsl  drop_frag.glsl  fb_blur_x_frag.glsl  fb_blur_y_frag.glsl  fb_combine_frag.glsl  fb_vert.glsl  paddle_frag.glsl  paddle_fsh.glsl  particle_frag.glsl  particle_geom.glsl  particle_vert.glsl  power_up_frag.glsl  ssao_apply_frag.glsl  ssao_blur_x_frag.glsl  ssao_blur_y_frag.glsl  ssao_frag.glsl  ssao_lq_frag.glsl  vortex_frag.glsl  vortex_fsh.glsl  vortex_vsh.glsl  world_frag.glsl  world_fsh.glsl  world_vsh.glsl
src/: resource_finder.cpp  sound_provider.cpp
src/controller/: glut_engine.cpp
src/flappy_box/controller/: box_object_logic.cpp  explosion_logic.cpp  flappy_engine.cpp  paddle_logic.cpp  power_up_logic.cpp  world_logic.cpp
src/flappy_box/model/: box.cpp  explosion.cpp  game_over.cpp  paddle.cpp  power_up.cpp  world.cpp
src/flappy_box/view/: box_al_audible.cpp  box_gl_drawable.cpp  explosion_al_audible.cpp  explosion_gl_drawable.cpp  game_over_al_audible.cpp  game_over_gl_drawable.cpp  paddle_al_audible.cpp  paddle_gl_drawable.cpp  power_up_gl_drawable.cpp  world_al_audible.cpp  world_gl_drawable.cpp
src/model/: game.cpp
src/view/: al_renderer.cpp  gl_renderer.cpp  glut_window.cpp
